--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -1,3 +1,4 @@
 {
-    "login_success": "Prihlasenie bolo uspesne"
+    "login_success": "Prihlasenie bolo uspesne",
+    "defaultError": "Nastala chyba, skuste to znovu"
 }
